--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -26,6 +26,11 @@
     -->
     <title>Queen Habesha</title>
     <script id="react-dotenv" src="./env.js"></script>
+    <script
+      src="https://accounts.google.com/gsi/client"
+      async=""
+      defer=""
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
